fix: set button alignment to flex-start
Stop link from growing beyond button size.

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -28,6 +28,7 @@
 }
 
 .lgAbove {
+  align-self: flex-start;
   display: none;
 }
 
